--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ a,
     font-size: 36px;
     color: #1F2937;
     font-weight: 900;
+    margin: 64px;
 }
 
 .quote-container {
@@ -94,4 +95,28 @@ a {
     border-radius: 4px;
     font-weight: 500;
     border: none;
+}
+
+.profession-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 300px;
+}
+
+.profession-text {
+    display: flex;
+    text-align: center;
+    gap: 120px;
+    margin-bottom: 128px;
+}
+
+.profession-images {
+    display: flex;
+    gap: 64px;
+}
+
+.pimage {
+    border: solid 4px #3882F6;
+    border-radius: 16px;
 }
