--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ a,
     color: #1F2937;
     font-weight: 300;
     font-style: italic;
+    margin-top: 30px;
 }
 
 .header {
@@ -119,4 +120,13 @@ a {
 .pimage {
     border: solid 4px #3882F6;
     border-radius: 16px;
+}
+
+.quote-container {
+    padding: 64px 300px;
+}
+
+.author {
+    text-align: right;
+    font-weight: 500;
 }
